// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render the default notification checkbox 1`] = `
<div
  className="inlineBlock"
  data-tip="Sign up for notifications for this section"
>
  <div
    className="notifSwitch"
  >
    <input
      checked={false}
      className="notif-switch-checkbox"
      id="notifSwitch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="notif-switch-label"
      htmlFor="notifSwitch-1"
    >
      <span
        className="notif-switch-button"
      />
    </label>
  </div>
</div>
`;

exports[`render the read only notification checkbox 1`] = `
<div
  className="inlineBlock"
  data-tip="Sign up for notifications for this section"
>
  <div
    className="notifSwitch"
  >
    <input
      checked={false}
      className="notif-switch-checkbox"
      id="notifSwitch-2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="notif-switch-label"
      htmlFor="notifSwitch-2"
    >
      <span
        className="notif-switch-button"
      />
    </label>
  </div>
</div>
`;
